fix: update lockfile and tsconfig for local stable buile

--- a/f-iot-react/tsconfig.app.json
+++ b/f-iot-react/tsconfig.app.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "../e_typescript/src/main.js", "../e_typescript/src/main.ts"]
+  "include": ["src"]
 }
